src/snapshots/afrotd__parser__tests__rule_1.4.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 4
  - 3
title: Vorgeschriebene Ausrüstung
text: "Alle Teammitglieder müssen die folgende vorgeschriebene Ausrüstung tragen:\n\ta) Helm\n\tb) Hüftschützer\n\tc) Trikot\n\td) Knieschützer\n\te) Mundschutz\n\tf) Hosen\n\tg) Schulterschutz\n\th) Stutzen\n\ti) Oberschenkelschützer."
interpretations: []
