src/snapshots/afrotd__parser__tests__rule_1.4.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 4
  - 4
title: "Beschreibung: Vorgeschriebene Ausrüstung"
text: "\ta) Helm.\n\t\t1. Der Helm muss mit einem passenden Helmgitter und einem geschlossenen 4- oder 6-Punkt-Kinnriemen versehen sein, bei dem alle Verschlüsse gesichert sind, wenn der Ball sich im Spiel befindet.\n\t\t2. Außereuropäische Teammitglieder sind durch ein 12 cm großes, deutlich sichtbares „A“ auf der Helmrückseite zu kennzeichnen.\n\t\t3. Spieler eines Teams sollen Helme gleicher Farbe und gleichen Designs tragen.\n\t\t4. Der Helm muss ein Warnzeichen tragen, das auf die Verletzungsgefahr hinweist, und ein amtliches Prüfzeichen des Herstellers oder des Testers vorweisen, dass der Helm gemäß der National Operating Comitee on Standards for Athletic Equipment (NOCSAE) Norm getestet wurde. Wiederhergestellte Helme müssen ein Prüfzeichen aufweisen, das darauf hinweist, das alle Standards mit der NOCSAE- Norm übereinstimmen.\n\tb) Steißbeinschutz und Hüftschützer. Spieler müssen einen Steißbeinschutz und beidseits einen Hüftschutz tragen.\n\tc) Trikot. Siehe Regel 1.4.5\n\td) Knieschützer. Knieschützer müssen von der Hose überdeckt werden. Außerdem müssen Knieschützer und Hosen die Knie bedecken. Es dürfen keine Pads oder andere schützende Ausrüstungsteile außerhalb der Hosen getragen werden (siehe Anhang B).\n\te) Mundschutz. Der Mundschutz muss im Mund getragen werden und in einer deutlich sichtbaren Farbe sein. Er darf nicht weiß oder transparent sein. Er muss aus Gel- oder Plastikmaterial hergestellt sein und die oberen Zähne vollständig bedecken. Es wird empfohlen, dass der Mundschutz genau angepasst wird.\n\tf) Hosen. Spieler eines Teams sollen Hosen gleicher Farbe und gleichen Aussehens tragen.\n\tg) Schulterschutz. Es gibt keine besonderen Spezifizierungen für Schulterschützer (siehe Anhang B).\n\th) Stutzen. Spieler eines Teams sollen sichtbare Stutzen oder Beinbekleidungen tragen, die gleichfarbig und von gleichem Aussehen sind (Ausnahme: unveränderte Kniestützen, Tape oder Bandagen, um eine Verletzung zu schützen oder zu verhindern und barfüßige Kicker).\n\ti) Oberschenkelschützer. Es gibt keine besonderen Spezifizierungen für Oberschenkelschützer (siehe Anhang B)."
interpretations: []
