src/snapshots/afrotd__parser__tests__rule_1.4.5.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 4
  - 5
title: "Design, Farbe und Nummer des Trikots"
text: "\ta) Design.\n\t\t1. Das Trikot muss Ärmel haben, die die Schulterschützer vollständig verdecken. Das Trikot darf nicht verändert worden und muss reißfest sein. Es muss bis zum Hosenbund reichen. Wenn es über den Hosenbund hinaus reicht, muss es eingesteckt werden. Kein anderes Bekleidungsteil unter dem Trikot (z. B. T-Shirt) darf über die Taille reichen.\n\t\t2. Ein zweites Trikot, welches alle Voraussetzungen für ein Trikot nach Regel 1.4.5 erfüllt, darf zusätzlich unter dem ursprünglichen Trikot getragen werden. Westen, und/oder veränderte Trikots mit Reißverschlüssen, Klettverschlüssen oder anderen Verschlüssen sind nicht erlaubt.\n\t\t3. Außereuropäische Teammitglieder sind durch ein 12 cm großes, sich von der Trikotfarbe deutlich abhebendes und dauerhaft angebrachtes „A“ auf der Trikotrückseite zu kennzeichnen.\n\t\t4. Trikots dürfen weder mit Klebeband abgeklebt noch verknotet werden.\n\tb) Farbe.\n\t\t1. Spieler gegnerischer Teams müssen unterschiedlich farbige Trikots tragen. Spieler eines Teams müssen Trikots gleicher Farbe und gleichen Aussehens tragen.\n\t\t2. Das Gastteam muss für unterschiedliche Kleidung sorgen.\n\t\t\ta. In Bezug auf die Unterschiedlichkeit der Trikotfarben wird auf die Bestimmungen der BSO Deutschland verwiesen.\n\t\t\tb. Trägt eines der Teams beim Kickoff zu Beginn einer Halbzeit farbige Trikots entgegen den Bestimmungen der BSO bzw. den Absprachen der Teamleitungen, ist das ein Foul wegen unsportlichen Verhaltens. (A.R. 1.4.7.III). Strafe: Wird als Dead Ball Foul durchgeführt. 15 Meter vom Succeeding Spot nach dem Kickoff. Wird der Kickoff zu einem Touchdown zurückgetragen, wird die Strafe, je nach Wahl des gefoulten Teams, entweder beim Try oder dem anschließenden Kickoff durchgeführt.\n\tc) Nummern.\n\t\t1. Auf Brust und Rücken des Trikots müssen deutlich sichtbare arabische Nummern dauerhaft angebracht und 20–25 cm hoch sein. Die Nummern müssen sich, unabhängig von deren Umrandung, farblich in deutlichem Kontrast zur Trikotfarbe abheben.\n\t\t2. Die Trikots aller Spieler eines Teams müssen mit Nummern gleicher Art und Farbe auf Brust und Rücken versehen sein. Nummern, die sich auf irgendeinem Kleidungsteil befinden, müssen mit den vorgeschriebenen Nummern auf Brust und Rücken übereinstimmen. (Hinweis: Das Bild eines Trikots im Anhang B dient der Verdeutlichung der Regel.)"
interpretations: []
