src/snapshots/afrotd__parser__tests__rule_1.4.9.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 4
  - 9
title: Erklärung des Coaches
text: "Durch die Unterschrift unter den Spielberichtsbogen bestätigt der Vereinsverantwortliche, dass alle Teammitglieder:\n\ta) darüber informiert wurden, welche Ausrüstungsteile gemäß der Regel vorgeschrieben und welche illegal sind;\n\tb) mit der vorgeschriebenen Ausrüstung ausgestattet sind;\n\tc) über die richtige Trageweise und das Vorhandensein der vorgeschriebenen Ausrüstung informiert wurden;\n\td) darüber informiert wurden, dass sie den Coaches anzeigen müssen, wenn die Ausrüstung während des Spieles illegal wird."
interpretations: []
