src/snapshots/afrotd__parser__tests__rule_10.1.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 10
  - 1
  - 1
title: Wie und wann vollständig
text: "\ta) Eine Strafe ist vollständig, wenn sie angenommen, abgelehnt oder gemäß den Regeln aufgehoben wird oder wenn dem Referee die Wahl offensichtlich ist.\n\tb) Jede Strafe kann abgelehnt werden, aber ein disqualifizierter Spieler muss das Spiel verlassen, egal, ob die Strafe angenommen oder abgelehnt wird (Regel 2.27.12).\n\tc) Wurde ein Foul begangen, muss die Strafe vervollständigt werden, bevor der Ball für den nachfolgenden Down freigegeben wird.\n\td) Strafen, die im Konflikt mit anderen Regeln stehen, dürfen nicht durchgeführt werden."
interpretations: []
