src/snapshots/afrotd__parser__tests__rule_10.1.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 10
  - 1
  - 2
title: Mit dem Snap
text: "Ein Foul, das sich gleichzeitig mit dem Snap oder einem Free Kick ereignet, wird geregelt, als wäre es während dieses Downs geschehen (Ausnahme: Regel 3.5.2.e)."
interpretations: []
