src/snapshots/afrotd__parser__tests__rule_10.1.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 10
  - 1
  - 3
title: Live Ball Fouls durch dasselbe Team
text: "Werden dem Referee zwei oder mehrere Live Ball Fouls durch dasselbe Team gemeldet, kann das gefoulte Team nur eine dieser Strafen auswählen. Jeder Spieler, der ein Foul verursacht, dessen Strafe eine Disqualifikation beinhaltet, muss das Spiel verlassen."
interpretations: []
