src/snapshots/afrotd__parser__tests__rule_10.1.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 10
  - 1
  - 4
title: Aufhebende Fouls
text: "Werden dem Referee Live Ball Fouls beider Teams mitgeteilt, heben sich die Fouls auf und der Down wird wiederholt (A.R. 10.1.4.I und 10.1.4.VII). Jeder Spieler, der ein Foul verursacht, dessen Strafe die Disqualifizierung vorschreibt, muss das Spiel verlassen.\n\tAusnahmen:\n\t\t1. Wenn der Team Ballbesitz während eines Downs wechselt und das Team, das zuletzt Ballbesitz erlangt hat, nicht gefoult hat, bevor es zuletzt in Ballbesitz kam, kann dieses Team aufhebende Fouls ablehnen und dadurch, nach Vervollständigung der Strafe ihres Regelverstoßes, den Ball behalten (A.R. 10.1.4.II bis 10.1.4.VII).\n\t\t2. Wenn alle Team B-Fouls, die sich vor einem Team-Ballbesitzwechsel ereignen nach dem Postscrimmage Kick Enforcement Prinzip durchgeführt werden sollen, kann Team B aufhebende Fouls ablehnen und Postscrimmage Kick Durchführung akzeptieren.\n\t\t3. Regel 8.3.4.c und 3.1.3.g (während eines Try oder während Extraperioden, nachdem Team B Ballbesitz erlangt hat)."
interpretations: []
