src/snapshots/afrotd__parser__tests__rule_10.1.5.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 10
  - 1
  - 5
title: Dead Ball Fouls
text: "Strafen für Dead Ball Fouls, die sich vor einem Team-Ballbesitzwechsel ereignen, werden gesondert und in der Reihenfolge ihres Geschehens durchgeführt (A.R. 10.1.5.I bis 10.1.5.III) (Ausnahme: Wenn unsportliche Verhalten Dead Ball Fouls oder persönliche Dead Ball Fouls von beiden Teams dem Referee gemeldet werden und keine dieser Strafen vervollständigt wurde, gleichen sich die Fouls aus, die Nummer oder der Typ des Downs, der festgesetzt wurde, bevor die Fouls sich ereigneten, bleiben unberührt. Jeder disqualifizierte Spieler muss das Spiel verlassen (Regeln 5.2.6 und 10.2.2.a))."
interpretations: []
